Changed the logout address

--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -147,7 +147,7 @@ ${templateSettingFlows}
   }
 
   function signOut(){
-    window.location.replace(PATH_USER_LOGOUT);
+    window.location.replace('auth/logout.json');
   }
 
   function initialGlobalSetting(){
