--- a/src/main/webapp/app/settings-flow.html
+++ b/src/main/webapp/app/settings-flow.html
@@ -7,212 +7,159 @@
     <!-- <meta name="theme-color" content="#7952b3"> -->
 
     <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-    <!-- <link rel="stylesheet" href="../dist/bootstrap.css"> -->
+    <link rel="stylesheet" href="../dist/bootstrap.css">
     <!-- <link rel="stylesheet" href="./dist/font/fontawesome-free.min.css"> -->
     <link rel="stylesheet" href="../dist/bootstrap-icons.css">
     <link rel="stylesheet" href="../dist/icheck-bootstrap.min.css">
-    <link rel="stylesheet" href="../dist/ag-theme-alpine.css">
+    <!-- <link rel="stylesheet" href="../dist/ag-theme-alpine.css"> -->
     <link rel="stylesheet" href="../dist/jquery/menu/jquery.contextMenu.css">
     <link rel="stylesheet" href="../dist/daterangepicker.css">
     <link rel="stylesheet" href="../dist/toastr.min.css">
     <link rel="stylesheet" href="../dist/fancytree/skin-win8/ui.fancytree.min.css">
-    <link rel="stylesheet" href="../dist/adminlte.css">
+    <!-- <link rel="stylesheet" href="../dist/adminlte.css"> -->
     <link rel="stylesheet" href="../dist/toastr.min.css">
     <link rel="stylesheet" href="dashboard.css">
 
+    <script src="../dist/bootstrap.bundle.js"></script>
     <script src="../dist/jquery-3.5.1.min.js"></script>
-    <script src="../dist/adminlte.min.js"></script>
-
+    <!-- <script src="../dist/adminlte.min.js"></script> -->
 </head>
-<body style="overflow: hidden;">
-<div class="row">
-    <div class="col-5">
-        <div class="card-body card-main hidden" id="tree-harvest-struct" style="width: 100%; height:100%; overflow-x: hidden; overflow-y: scroll;">
-            <table id="grid-flow-settings" class="hierachy-tree" style="width: 100%; outline: none;">
-              <colgroup><col width="50px"><col width="*"><col width="80px"><col width="80px"><col width="80px"><col width="80px"><col width="80px"><col width="80px"><col width="80px"></colgroup>
-              <thead><tr><th>Action</th><th>URL</th><th>Type</th><th>Status</th><th>Size</th><th>URLs</th><th>Success</th><th>Failed</th><th>TotSize</th></tr></thead>
-            </table>
+<!-- <body class="hold-transition" style="overflow: hidden;"> -->
+<body class="hold-transition">
+
+<div class="wrapper">
+    <div class="row">
+        <div class="col-4">
+            <nav class="navbar navbar-expand navbar-dark bg-secondary">
+                <a href="#" class="navbar-brand">Flow Setting List</a>
+                <ul class="navbar-nav me-auto mb-2 mb-md-0"></ul>
+                <button type="button" class="btn btn-block btn-primary btn-sm"><i class="bi bi-plus-lg"></i>New</button>                
+            </nav>
+        </div>
+        <div class="col-8">
+            <nav class="navbar navbar-expand navbar-light bg-dark">
+                <a href="#" class="navbar-brand">Flow Setting Details</a>
+                <ul class="navbar-nav me-auto mb-2 mb-md-0"></ul>
+                <button type="button" class="btn btn-block btn-primary btn-sm">Save</button>
+            </nav>
         </div>
     </div>
 
-    <div class="col-7">
-        <div class="alert alert-warning" role="alert" name="audit" style="display: none;"></div>
-        <form>
-            <input type="text" name="id" style="display: none;">
-<!--            <div class="mb-3">-->
-<!--                <div class="input-group-text">-->
-
-<!--                    <input class="form-check-input mt-0" type="checkbox" name="enabled" checked>-->
-<!--                    <label for="exampleInputEmail1" class="form-label">Flow Name</label>-->
-<!--                </div>-->
-
-<!--                <input type="text" class="form-control" name="name">-->
-<!--            </div>-->
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox input</label>
-            </div>
-
-            <div class="input-group mb-3">
-                <div class="input-group-text">
-                    <input class="form-check-input mt-0" type="checkbox" name="enabled" checked>
+    <div class="row">
+        <div class="col-4">
+            <!-- <div class="card-body card-main hidden" id="tree-harvest-struct" style="width: 100%; height:calc(100vh - 4em); overflow-x: hidden; overflow-y: scroll;">
+                <table id="grid-flow-settings" class="hierachy-tree" style="width: 100%; outline: none;">
+                  <colgroup><col width="50px"><col width="*"><col width="80px"><col width="80px"></colgroup>
+                  <thead><tr><th>ID</th><th>Flow Name</th><th>Status</th><th>Action</th></tr></thead>
+                </table>
+            </div> -->
+            <ol class="list-group list-group-numbered">
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <a href="#">Content for list item</a>
+                <span class="badge bg-danger rounded-pill"><a href="#" class="text-white">Delete</a></span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Subheading</div>
+                  Content for list item
                 </div>
-                <span class="input-group-text">Flow Name</span>
-                <input type="text" class="form-control" name="name">
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Email address</label>
-                <select class="form-control">
-                    <option>option 1</option>
-                    <option>option 2</option>
-                    <option>option 3</option>
-                    <option>option 4</option>
-                    <option>option 5</option>
-                </select>
-            </div>
-        </form>
+                <span class="badge bg-primary rounded-pill">14</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Subheading</div>
+                  Content for list item
+                </div>
+                <span class="badge bg-primary rounded-pill">14</span>
+              </li>
+            </ol>
 
-        <ul class="list-group" id="template-flow-setting">
+        </div>
+
+        <div class="col-8">
             <div class="alert alert-warning" role="alert" name="audit" style="display: none;"></div>
-
-            <li class="list-group-item section-title">Basic Flow Setting Properties</li>
-            <li class="list-group-item" id="flow-setting">
-                <input type="text" name="id" style="display: none;">
-                <div class="input-group mb-3">
-                    <div class="input-group-text">
-                        <input class="form-check-input mt-0" type="checkbox" name="enabled" checked>
+            <div class="card bg-white mb-3">
+              <div class="card-header">Basic Settings</div>
+              <div class="card-body">
+                    <input type="text" name="id" style="display: none;">       
+          
+                    <div class="nput-group mb-3 form-check form-switch">
+                      <input class="form-check-input" type="checkbox" role="switch" id="flow-setting-enabled" name="flowSettingEnabled" checked>
+                      <label class="form-check-label" for="flow-setting-enabled">If enable depositing for this material flow.</label>
                     </div>
-                    <span class="input-group-text">Flow Name</span>
-                    <input type="text" class="form-control" name="name">
-                </div>
 
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Producer</span>
-                    <select class="form-control" name="producer"></select>
-                </div>
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Material Flow</span>
-                    <select class="form-control" name="materialFlow"></select>
-                </div>
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Root Location</span>
-                    <input type="text" class="form-control" placeholder="Root Path" name="rootPath">
-                </div>
-
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Stream Path</span>
-                    <input type="text" class="form-control" placeholder="content/streams" , name="streamLocation">
-                </div>
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Injection Completed File Name</span>
-                    <input type="text" class="form-control" placeholder="ready-for-ingestion-FOLDER-COMPLETED" ,
-                           name="injectionCompleteFileName">
-                </div>
-
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Scan Interval</span>
-                    <div class="input-group-text">
-                        <select class="form-select mt-0" name="delayUnit">
-                            <option value="S">Seconds</option>
-                            <option value="M">Minutes</option>
-                            <option value="H">Hours</option>
-                            <option value="D">Days</option>
-                        </select>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">Flow Name</span>
+                        <input type="text" class="form-control" name="flowName">
+                        <span class="input-group-text">Root Location</span>
+                        <input type="input" class="form-control" name="rootPath" aria-describedby="desc-root-path">
                     </div>
-                    <input type="text" class="form-control" placeholder="1" , name="delays">
-                </div>
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Max Active Days</span>
-                    <input type="text" class="form-control" placeholder="14" , name="maxActiveDays">
-                </div>
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Max Storage Days</span>
-                    <input type="text" class="form-control" placeholder="365" , name="maxSaveDays">
-                </div>
 
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Deposit Schedule (Max Threads):</span>
-                    <span class="input-group-text">Mon</span>
-                    <input type="text" class="form-control" name="mon">
-                    <span class="input-group-text">Tue</span>
-                    <input type="text" class="form-control" name="tue">
-                    <span class="input-group-text">Wed</span>
-                    <input type="text" class="form-control" name="wed">
-                    <span class="input-group-text">Thu</span>
-                    <input type="text" class="form-control" name="thu">
-                    <span class="input-group-text">Fri</span>
-                    <input type="text" class="form-control" name="fri">
-                    <span class="input-group-text">Sat</span>
-                    <input type="text" class="form-control" name="sat">
-                    <span class="input-group-text">Sun</span>
-                    <input type="text" class="form-control" name="sun">
-                </div>
-            </li>
-
-            <li class="list-group-item section-title">Injection Location</li>
-            <li class="list-group-item" id="injection-location">
-                <input type="text" name="id" style="display: none;">
-                <div class="input-group mb-3">
-                    <span class="input-group-text">Root Location</span>
-                    <div class="input-group-text">
-                        <select class="form-select" name="scanMode">
-                            <option value="NFS">NFS</option>
-                            <option value="FTP">FTP</option>
-                            <!-- <option value="FTP">SFTP</option> -->
-                        </select>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">Producer</span>
+                        <select class="form-control form-select mt-0" name="producer"></select>
+                        <span class="input-group-text">Material Flow</span>
+                        <select class="form-control form-select mt-0" name="materiaFlow"></select>
                     </div>
-                    <input type="text" class="form-control" placeholder="Root Path" name="rootPath">
-                </div>
+              </div>
 
-                <div class="input-group mb-3">
-                    <span class="input-group-text">FTP Server</span>
-                    <input type="text" class="form-control" placeholder="FTP Server" name="ftpServer">
-                    <span class="input-group-text">FTP Port</span>
-                    <input type="text" class="form-control" placeholder="FTP Port" name="ftpPort">
-                    <span class="input-group-text">FTP Username</span>
-                    <input type="text" class="form-control" placeholder="Username" name="ftpUsername">
-                    <span class="input-group-text">FTP Password</span>
-                    <input type="password" class="form-control" placeholder="Password" name="ftpPassword">
-                </div>
-            </li>
-
-            <li class="list-group-item section-title">Backup Location</li>
-            <li class="list-group-item" id="backup-location">
-                <input type="text" name="id" style="display: none;">
-                <div class="input-group mb-3">
-                    <div class="input-group-text">
-                        <input class="form-check-input mt-0" type="checkbox" name="enabled" checked>
+              <div class="card-header">Advanced Settings</div>
+              <div class="card-body">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">Stream Path</span>
+                        <input type="text" class="form-control" placeholder="content/streams" , name="streamLocation">
                     </div>
-                    <span class="input-group-text">Root Location</span>
-                    <div class="input-group-text">
-                        <select class="form-select" name="scanMode">
-                            <option value="NFS">NFS</option>
-                            <option value="FTP">FTP</option>
-                            <!-- <option value="FTP">SFTP</option> -->
-                        </select>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">Injection Completed File Name</span>
+                        <input type="text" class="form-control" placeholder="ready-for-ingestion-FOLDER-COMPLETED" ,
+                               name="injectionCompleteFileName">
                     </div>
-                    <input type="text" class="form-control" placeholder="Root Path" name="rootPath">
-                </div>
 
-                <div class="input-group mb-3">
-                    <span class="input-group-text">FTP Server</span>
-                    <input type="text" class="form-control" placeholder="FTP Server" name="ftpServer">
-                    <span class="input-group-text">FTP Port</span>
-                    <input type="text" class="form-control" placeholder="FTP Port" name="ftpPort">
-                    <span class="input-group-text">FTP Username</span>
-                    <input type="text" class="form-control" placeholder="Username" name="ftpUsername">
-                    <span class="input-group-text">FTP Password</span>
-                    <input type="password" class="form-control" placeholder="Password" name="ftpPassword">
-                </div>
-            </li>
-        </ul>
-    </div>
-</div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">Scan Interval (Seconds)</span>
+                        <div class="input-group-text" style="display:none;">
+                            <select class="form-select mt-0" name="delayUnit">
+                                <option value="S">Seconds</option>
+                                <option value="M">Minutes</option>
+                                <option value="H">Hours</option>
+                                <option value="D">Days</option>
+                            </select>
+                        </div>
+                        <input type="text" class="form-control" placeholder="1" , name="delays">
+                    <!-- </div>
+                    <div class="input-group mb-3"> -->
+                        <span class="input-group-text">Max Active Days</span>
+                        <input type="text" class="form-control" placeholder="14" , name="maxActiveDays">
+                    <!-- </div>
+                    <div class="input-group mb-3"> -->
+                        <span class="input-group-text">Max Storage Days</span>
+                        <input type="text" class="form-control" placeholder="365" , name="maxSaveDays">
+                    </div>
+
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">Max Threads:</span>
+                        <span class="input-group-text">Mon</span>
+                        <input type="text" class="form-control" name="mon">
+                        <span class="input-group-text">Tue</span>
+                        <input type="text" class="form-control" name="tue">
+                        <span class="input-group-text">Wed</span>
+                        <input type="text" class="form-control" name="wed">
+                        <span class="input-group-text">Thu</span>
+                        <input type="text" class="form-control" name="thu">
+                        <span class="input-group-text">Fri</span>
+                        <input type="text" class="form-control" name="fri">
+                        <span class="input-group-text">Sat</span>
+                        <input type="text" class="form-control" name="sat">
+                        <span class="input-group-text">Sun</span>
+                        <input type="text" class="form-control" name="sun">
+                    </div>
+              </div>
+            </div> <!--End of card-->       
+        </div>
+    </div> <!--End of row-->
+
+</div> <!--End of warpper-->
+
 <script src="../dist/fancytree/jquery.fancytree-all-deps.js"></script>
 <script src="../dist/fancytree/modules/jquery.fancytree.table.js"></script>
 <script src="../dist/fancytree/modules/jquery.fancytree.wide.js"></script>
