--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -8,18 +8,18 @@
   <!-- <meta name="theme-color" content="#7952b3"> -->
 
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="stylesheet" href="./dist/bootstrap.css">
+  <link rel="stylesheet" href="../dist/bootstrap.css">
   <!-- <link rel="stylesheet" href="./dist/font/fontawesome-free.min.css"> -->
-  <link rel="stylesheet" href="./dist/bootstrap-icons.css">
-  <link rel="stylesheet" href="./dist/icheck-bootstrap.min.css">
-  <link rel="stylesheet" href="./dist/ag-theme-alpine.css">
-  <link rel="stylesheet" href="./dist/jquery/menu/jquery.contextMenu.css">
-  <link rel="stylesheet" href="./dist/daterangepicker.css">
-  <link rel="stylesheet" href="./dist/toastr.min.css">
+  <link rel="stylesheet" href="../dist/bootstrap-icons.css">
+  <link rel="stylesheet" href="../dist/icheck-bootstrap.min.css">
+  <link rel="stylesheet" href="../dist/ag-theme-alpine.css">
+  <link rel="stylesheet" href="../dist/jquery/menu/jquery.contextMenu.css">
+  <link rel="stylesheet" href="../dist/daterangepicker.css">
+  <link rel="stylesheet" href="../dist/toastr.min.css">
 
-  <link rel="stylesheet" href="./app/dashboard.css">
+  <link rel="stylesheet" href="dashboard.css">
 
-  <script src="./dist/jquery-3.5.1.min.js"></script>
+  <script src="../dist/jquery-3.5.1.min.js"></script>
 </head>
 
 <body style="overflow: hidden;">
@@ -36,30 +36,26 @@
       <button class="btn btn-success" type="button" data-bs-toggle="modal" data-bs-target="#new-manual-deposit-job"><i class="bi bi-plus-circle"></i>&nbsp;New Deposit</button>
     </ul>
 
-    <ul class="navbar-nav bg-success" id="control-right">
+    <ul class="navbar-nav" id="control-right">
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Signed in as ${userName} <br/> <i class="bi bi-person"></i>&nbsp;Admin</a>
-        <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end bg-danger" aria-labelledby="dropdown01">
-          <!-- <li><a class="dropdown-item" href="#" onclick="signOut();"><i class="bi bi-power"></i>&nbsp;Sign out</a></li> -->
-          <li><a class="dropdown-item" href="./auth/logout.json"><i class="bi bi-power"></i>&nbsp;Sign out</a></li>
+        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-gear"></i>Settings</a>
+        <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="dropdown01">
+          <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#modal-producer-settings">Producer Settings</a></li>
+          <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#modal-flow-settings">Materialflow Settings</a></li>
+          <li><a class="dropdown-item" href="#">User White List</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <!-- <li><a class="dropdown-item" href="#" onclick="signOut();"><i class="bi bi-power"></i> Sign out</a></li> -->
+          <li><a class="dropdown-item" href="./auth/logout.json" style="color:red;"><i class="bi bi-power"></i>Sign out: ${userName}</a></li>
         </ul>
-      </li>
-    </ul>
-
-    <ul class="navbar-nav bg-gradient">
-      <li class="nav-item">
-        <!-- <a class="nav-link" href="#" onclick="javascript: togglePanelSetting();">Settings <br/> <i class="bi bi-gear"></i></a> -->
-        <a class="nav-link" href="#" onclick="openModalSettings();">Settings <br/> <i class="bi bi-gear"></i></a>
       </li>
     </ul>
 </nav>
 
+
+
 <main style="display: none;">
   <div class="ag-theme-alpine-dark" id="grid-deposit-jobs"></div>
 </main>
-
-<!-- <div id="panelSetting"></div> -->
-  ${templateSettingGlobal}
 
 <div id="modal-sso-login" style="display: none;"></div>
 
@@ -80,22 +76,43 @@
   </div>
 </div>
 
-${templateDepositJobs}
 
-${templateSettingFlows}
+<!-- Modal: Material flow settings -->
+<div class="modal modal-fullscreen-lg-down fade" id="modal-flow-settings" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Flow Settings</h5>
+        <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <iframe id="inlineFrameExample"
+            title="Inline Frame Example"
+            width="100%"
+            height="550"
+            src="/app/settings-flow.html">
+        </iframe>
+      </div>
+      <!-- <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div> -->
+    </div>
+  </div>
+</div>
 
-<script src="./dist/bootstrap.bundle.js"></script>
-<script src="./dist/ag-grid-community.min.js"></script>
-<script src="./dist/jquery/menu/jquery.contextMenu.js"></script>
-<script src="./dist/jquery/menu/jquery.ui.position.js"></script>
-<script src="./dist/plugins/moment-with-locales.min.js"></script>
-<script src="./dist/daterangepicker.js"></script>
-<script src="./dist/toastr.min.js"></script>
 
-<script src="./app/dashboard.js"></script>
-<script src="./app/deposit-jobs.js"></script>
-<script src="./app/setting-flows.js"></script>
-<script src="./app/setting-global.js"></script>
+<script src="../dist/bootstrap.bundle.js"></script>
+<script src="../dist/ag-grid-community.min.js"></script>
+<script src="../dist/jquery/menu/jquery.contextMenu.js"></script>
+<script src="../dist/jquery/menu/jquery.ui.position.js"></script>
+<script src="../dist/plugins/moment-with-locales.min.js"></script>
+<script src="../dist/daterangepicker.js"></script>
+<script src="../dist/toastr.min.js"></script>
+
+<script src="dashboard.js"></script>
+<script src="deposit-jobs.js"></script>
+<script src="setting-flows.js"></script>
+<script src="setting-global.js"></script>
 
 <#list map_path_constants as key, value>
 <script>
