Debug the deposit account

--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -98,7 +98,8 @@
   </div>
 
   <!-- Modal: Deposit Account settings -->
-  <div class="modal modal-fullscreen-lg-down fade" id="modal-deposit-account-settings" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<!--  modal-fullscreen-lg-down-->
+  <div class="modal fade" id="modal-deposit-account-settings" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
       <div class="modal-content">
         <div class="modal-header">
@@ -424,7 +425,7 @@
   <script src="dashboard-constants.js"></script>
   <script src="dashboard.js"></script>
   <script src="settings.js"></script>
-  <script src="settings-producer.js"></script>
+  <script src="settings-deposit-account.js"></script>
   <script src="settings-flow.js"></script>
   <script src="settings-whitelist.js"></script>
   <script src="deposit-jobs.js"></script>
@@ -483,8 +484,6 @@
         }else{
           modalGlobalSettingInitial.show();
         }
-
-
     });
   </script>
 </body>
