--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Deposit Dashboard</title>
+  <title>Deposit | Dashboard</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <!-- <meta name="theme-color" content="#7952b3"> -->
 
-  <link rel="icon" type="image/x-icon" href="../favicon.ico" />
-  <link rel="stylesheet" href="../dist/bootstrap.css">
+  <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+  <link rel="stylesheet" href="./dist/bootstrap.css">
   <!-- <link rel="stylesheet" href="./dist/font/fontawesome-free.min.css"> -->
-  <link rel="stylesheet" href="../dist/bootstrap-icons.css">
-  <link rel="stylesheet" href="../dist/icheck-bootstrap.min.css">
-  <link rel="stylesheet" href="../dist/ag-theme-alpine.css">
-  <link rel="stylesheet" href="../dist/jquery/menu/jquery.contextMenu.css">
-  <link rel="stylesheet" href="../dist/daterangepicker.css">
-  <link rel="stylesheet" href="../dist/toastr.min.css">
-
-  <link rel="stylesheet" href="dashboard.css">
-
-  <script src="../dist/jquery-3.5.1.min.js"></script>
+  <link rel="stylesheet" href="./dist/bootstrap-icons.css">
+  <link rel="stylesheet" href="./dist/icheck-bootstrap.min.css">
+  <link rel="stylesheet" href="./dist/ag-theme-alpine.css">
+  <link rel="stylesheet" href="./dist/jquery/menu/jquery.contextMenu.css">
+  <link rel="stylesheet" href="./dist/daterangepicker.css">
+  <link rel="stylesheet" href="./dist/toastr.min.css">
+  <link rel="stylesheet" href="./app/dashboard.css">
+  <script src="./dist/jquery-3.5.1.min.js"></script>
 </head>
 
 <body style="overflow: hidden;">
   <nav class="navbar navbar-expand-lg navbar-dark" style="padding: 0 0 0 5px; background: linear-gradient(to right, #212529, #212529, #198754, #212529);">
-    <a href="#" class="navbar-brand"><img src="../img/natlib-logo-orange.png" width="35" height="35">&nbsp;Deposit&nbsp;Dashboard</a>
+    <a href="#" class="navbar-brand"><img src="./img/natlib-logo-orange.png" width="35" height="35">&nbsp;Deposit&nbsp;Dashboard</a>
     <form class="d-flex">
       <input id="filter-deposit-job" class="form-control me-2" type="search" placeholder="Filter" aria-label="Search">
     </form>
@@ -417,28 +415,29 @@
 
   ${templateDepositJobs}
 
+  <script>
+  <#list map_path_constants as key, value>
+  const ${key}='${PATH_CONTEXT}' + '${value}';
+  </#list>
+  </script>
 
-  <script src="../dist/bootstrap.bundle.js"></script>
-  <script src="../dist/ag-grid-community.min.js"></script>
-  <script src="../dist/jquery/menu/jquery.contextMenu.js"></script>
-  <script src="../dist/jquery/menu/jquery.ui.position.js"></script>
-  <script src="../dist/plugins/moment-with-locales.min.js"></script>
-  <script src="../dist/daterangepicker.js"></script>
-  <script src="../dist/toastr.min.js"></script>
+  <script src="./dist/bootstrap.bundle.js"></script>
+  <script src="./dist/ag-grid-community.min.js"></script>
+  <script src="./dist/jquery/menu/jquery.contextMenu.js"></script>
+  <script src="./dist/jquery/menu/jquery.ui.position.js"></script>
+  <script src="./dist/plugins/moment-with-locales.min.js"></script>
+  <script src="./dist/daterangepicker.js"></script>
+  <script src="./dist/toastr.min.js"></script>
 
 <!--  <script src="dashboard-constants.js"></script>-->
-  <script src="dashboard.js"></script>
-  <script src="settings.js"></script>
-  <script src="settings-deposit-account.js"></script>
-  <script src="settings-flow.js"></script>
-  <script src="settings-whitelist.js"></script>
-  <script src="deposit-jobs.js"></script>
+  <script src="./app/dashboard.js"></script>
+  <script src="./app/settings.js"></script>
+  <script src="./app/settings-deposit-account.js"></script>
+  <script src="./app/settings-flow.js"></script>
+  <script src="./app/settings-whitelist.js"></script>
+  <script src="./app/deposit-jobs.js"></script>
 
-  <#list map_path_constants as key, value>
-  <script>
-  const ${key}='${PATH_CONTEXT}' + '${value}';
-  </script>
-  </#list>
+
 
   <script>
     const HTML_IFRAME_LOGIN='<iframe src="login.html" scrolling="no" frameborder="0" allowfullscreen> </iframe>';
