--- a/src/main/webapp/app/login.html
+++ b/src/main/webapp/app/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
   
-    <title>Signin Dashbard</title>
+    <title>Deposit | Dashboard</title>
     
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
