--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -29,7 +29,7 @@
 
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <button class="btn btn-success" type="button" data-bs-toggle="modal" data-bs-target="#search-deposit-job"><i class="bi bi-search"></i>&nbsp;Search</button>
-<!--      <button class="btn btn-success" type="button" data-bs-toggle="modal" data-bs-target="#new-manual-deposit-job"><i class="bi bi-plus-circle"></i>&nbsp;New Deposit</button>-->
+      <button class="btn btn-success" onclick="initDepositJob();"><i class="bi bi-arrow-clockwise"></i>&nbsp;Reload</button>
     </ul>
 
     <ul class="navbar-nav" id="control-right">
