Changed the work inject to ingest

--- a/src/main/webapp/app/deposit-jobs.html
+++ b/src/main/webapp/app/deposit-jobs.html
@@ -156,7 +156,7 @@
                     </div>
 
                     <div class="progress" id="progress-stage-name">
-                      <div class="progress-bar bg-running" role="progressbar" name="inject">Inject</div>
+                      <div class="progress-bar bg-running" role="progressbar" name="inject">Ingest</div>
                       <div class="progress-bar" role="progressbar" name="deposit" style="border-left: none; border-right: none;">Deposit</div>
                       <div class="progress-bar" role="progressbar" name="finalize">Finalize</div>
                     </div>
