--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -206,7 +206,7 @@
                           <input type="text" class="form-control" placeholder="content/streams" , name="streamLocation">
                       </div>
                       <div class="input-group mb-3">
-                          <span class="input-group-text">Injection Completed File Name</span>
+                          <span class="input-group-text">Ingestion Completed File Name</span>
                           <input type="text" class="form-control" placeholder="ready-for-ingestion-FOLDER-COMPLETED" ,
                                  name="injectionCompleteFileName">
                       </div>
