Added the actual content deletion options and delete during the finalise stage

--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -237,6 +237,15 @@
                           <span class="input-group-text">Sun</span>
                           <input type="text" class="form-control" name="sun">
                       </div>
+
+                      <div class="input-group mb-3">
+                          <span class="input-group-text">Deletion Options For Actual Content:</span>
+                          <select class="form-control form-select mt-0" name="actualContentDeleteOptions">
+                            <option value="notDelete">Not delete</option>
+                            <option value="deleteExceedMaxStorageDays">Delete when exceeds the MAX Storage Days</option>
+                            <option value="deleteInstantly">Delete instantly when finished</option>
+                          </select>              
+                      </div>
                   </div>
 
                   <div class="card-header"><h5>Health Audit</h5></div>
